WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
3546
Can't go back after first link followed from a new window opened by gmail
https://bugs.webkit.org/show_bug.cgi?id=3546
Summary
Can't go back after first link followed from a new window opened by gmail
Stuart Morgan
Reported
2005-06-15 09:58:38 PDT
* SUMMARY If you click an external link in a gmail message, then navigate to another page in the new window (using bookmarks, following a link, typing a url, etc.), the page that was originally opened can't be returned to with the back button (the button is disabled, and if you browse further the window/tab history on the back button will never show it). It doesn't even show up in the global history, either the menu or the listing in the bookmark manager. * STEPS TO REPRODUCE 1. Open a gmail email with a link in it 2. Click the link 3. Navigate to another page in the new window 4. Try to get back to the previous page through any means * RESULTS Page is mysteriously missing from history. * REGRESSION Also broken in 10.3.9; haven't tried regressing further back Apple Bug:
rdar://4147975
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2006-07-12 21:57:39 PDT
Reassigning to webkit-unassigned for more exposure.
David Kilzer (:ddkilzer)
Comment 2
2006-07-12 21:58:16 PDT
GMail is Google.
Brady Eidson
Comment 3
2007-01-05 13:44:11 PST
"rediscovered" this bug while exploring + fixing
http://bugs.webkit.org/show_bug.cgi?id=12117
I need to take a more seriously look at it now!!
Brady Eidson
Comment 4
2007-01-05 13:49:53 PST
Confirmed nothing "bad" happens in a release build other than the opened link getting left out of global and back/forward history. That noted, it may be a little while before I get to this one.
Brady Eidson
Comment 5
2007-04-11 11:39:17 PDT
<
rdar://problem/4664154
>
Brady Eidson
Comment 6
2007-04-13 13:47:25 PDT
Fixed landed in
r20878
David Kilzer (:ddkilzer)
Comment 7
2007-04-19 05:32:54 PDT
***
Bug 13122
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug